--- a/qof/qof/qofla-dir.h.in
+++ b/qof/qof/qofla-dir.h.in
@@ -22,5 +22,5 @@
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
-#define QOF_LIB_DIR "@-libdir-@"
+#define QOF_LIB_DIR "@QSF_LIB_DIR@"
 
