--- a/qof/configure.in
+++ b/qof/configure.in
@@ -1,16 +1,16 @@
 ## -*-m4-*-
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(qof, 0.6.0, http://lists.sourceforge.net/lists/listinfo/qof-devel)
+AC_INIT(qof, 0.6.1, http://lists.sourceforge.net/lists/listinfo/qof-devel)
 
 AC_PREREQ(2.53)
 
-LIBQOF_LIBRARY_VERSION=1:1:0
-LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:0:0
+LIBQOF_LIBRARY_VERSION=1:2:0
+LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:1:0
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 
-VERSION=0.6.0
+VERSION=0.6.1
 AC_SUBST(VERSION)
 PACKAGE=qof
 AC_SUBST(PACKAGE)
@@ -31,7 +31,6 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 
-AC_PATH_XTRA
 AC_FUNC_MKTIME
 AC_FUNC_STRTOD
 
@@ -60,17 +59,24 @@ AM_PATH_GLIB_2_0("2.0.0", , ,gobject)
 
 AC_PATH_PROG(PKG_CONFIG,pkg-config)
 if test "x$PKG_CONFIG" != x; then
-	GLIB_VERSION=`$PKG_CONFIG --exists 'glib >= 2.0.0'`
-	if test x$GLIB_VERSION != x; then
 	GLIB_LIBS=`$PKG_CONFIG --libs glib-2.0`
 	GLIB_CFLAGS=`$PKG_CONFIG --cflags glib-2.0`
+  GOBJECT_LIBS=`$PKG_CONFIG --libs gobject-2.0`
 	GMODULE_LIBS=`$PKG_CONFIG --libs gmodule-2.0`
-	AC_SUBST(GMODULE_LIBS)
-	AC_SUBST(GLIB_CFLAGS)
-	AC_SUBST(GLIB_LIBS)
-	fi
+fi
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+AC_SUBST(GOBJECT_LIBS)
+AC_SUBST(GMODULE_LIBS)
+
+AC_MSG_CHECKING(for GLIB - version >= 2.9.0)
+if $PKG_CONFIG 'glib-2.0 >= 2.9.0'
+then
+  AC_MSG_RESULT(yes)
+  AC_DEFINE(HAVE_GLIB29,1,[System has glib 2.9.0 or better])
+	HAVE_GLIB29=yes
 else
-	AC_MSG_ERROR([Glib-2.0 is required by QOF but it was not found.])
+	AC_MSG_RESULT(no)
 fi
 
 dnl **************************************************************
@@ -131,8 +137,8 @@ else
 	AC_SUBST(GDA_VERSION)
 fi
 
-AM_CONDITIONAL(USE_LIBGDA, [ test x$HAVE_GDA != x])
-AM_CONDITIONAL(USE_LIBGDA, [ test $HAVE_GDA = "use_gda"])
+AM_CONDITIONAL(USE_LIBGDA, [ test x"$HAVE_GDA" != x])
+AM_CONDITIONAL(USE_LIBGDA, [ test "$HAVE_GDA" = "use_gda"])
 AC_SUBST(USE_LIBGDA)
 AC_SUBST(ADD_PKG_LIB)
 
@@ -168,6 +174,19 @@ AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
 AC_SUBST(INTLTOOL_XGETTEXT)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [gettext domain])
+
+dnl ********************************
+dnl Auto-disable deprecated glib 
+dnl ********************************
+
+AC_ARG_ENABLE(deprecated-glib,
+  [  --disable-deprecated-glib    don't use deprecated glib functions],
+  [case "${enableval}" in
+        no) AC_DEFINE(G_DISABLE_DEPRECATED,1,
+          [Don't use deprecated glib functions]) ;;
+        yes) ;;
+        *) AC_MSG_ERROR(bad value ${enableval} for --enable-deprecated-glib) ;;
+        esac])
 
 dnl **************************************************************
 dnl If DWI is found on the build system, then build with it.
@@ -262,7 +281,54 @@ AC_SUBST(enable_latex_docs)
 BB_ENABLE_DOXYGEN
 # ----------------------------------------------------------------------------
 
-CFLAGS="${CFLAGS} -Wall"
+dnl *************************************
+dnl Extra warnings
+dnl *************************************
+AC_MSG_CHECKING(what extra warning flags to pass to the C compiler)
+if test ${GCC}x = yesx; then
+  warnFLAGS=
+  CFLAGS="${CFLAGS} -g2 -Wall"
+  AC_ARG_ENABLE(error-on-warning,
+        [  --disable-error-on-warning    disable treating compile warnings as errors],
+        [case "${enableval}" in
+        yes) warnFLAGS="${warnFLAGS} -Werror" ;;
+        no)  ;;
+        *) AC_MSG_ERROR(bad value ${enableval} for --enable-error-on-warning) ;;
+        esac],
+        [  warnFLAGS="${warnFLAGS} -Werror" ])
+  GCC_VERSION=`${CC} -dumpversion`
+  if test `echo ${GCC_VERSION} | cut -d. -f1` -ge 3; then
+     # This is gcc >= 3.x.x
+     if test `echo ${GCC_VERSION} | cut -d. -f2` -ge 4; then
+        # This is gcc >= 3.4.x
+        warnFLAGS="${warnFLAGS} -Wdeclaration-after-statement"
+     else if test `echo ${GCC_VERSION} | cut -d. -f1` -ge 4; then
+        # This is gcc == 4.x.x
+        warnFLAGS="${warnFLAGS} -Wdeclaration-after-statement -Wno-pointer-sign"
+        fi
+     fi
+  fi
+dnl  CFLAGS="${CFLAGS} ${warnFLAGS}"
+else
+  warnFLAGS=
+fi
+AC_MSG_RESULT($warnFLAGS)
+AC_SUBST(warnFLAGS)
+
+set_compile_warnings=no
+
+AC_ARG_ENABLE(compile-warnings,
+              [  --enable-compile-warnings
+                          Enable verbose compiler warnings],
+              set_compile_warnings=yes)
+
+if test "$GCC" = "yes" -a "$set_compile_warnings" != "no"; then
+        warnFLAGS="$warnFLAGS -Wcast-align \
+ -Wmissing-prototypes -Wmissing-declarations -Werror \
+ -Wstrict-prototypes -Winline -Wnested-externs -Wpointer-arith"
+fi
+
+dnl CFLAGS="${CFLAGS} -Wall"
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
@@ -331,7 +397,7 @@ echo "==========================="
 echo ""
 
 dnl <= CFLAGS and LDFLAGS =>
-echo "CFLAGS : $CFLAGS"
+echo "CFLAGS      :   $warnFLAGS"
 echo "LDFLAGS : $LDFLAGS"
 echo "QOF_CFLAGS  :   "`eval echo $QOF_CFLAGS`
 echo "QOF_LIBS    :   $QOF_LIBS"
