New Swedish and Vietnamese translations

--- a/qof/configure.in
+++ b/qof/configure.in
@@ -124,7 +124,7 @@ LIBGDA_LIBS=`$PKG_CONFIG --silence-errors --libs "libgda >= $GDA_REQUIRED"`
 AC_SUBST(LIBGDA_CFLAGS)
 AC_SUBST(LIBGDA_LIBS)
 if test "x$LIBGDA_LIBS" = x; then
-    AC_MSG_RESULT([No, GDA not found; will build using internal SQL library.])
+  AC_MSG_RESULT([No, GDA not found; will build using internal SQL library.])
 	LIBQOFSQL_LIBRARY_VERSION=1:1:0
 	ADD_PKG_LIB="-lqofsql"
 	AC_SUBST(LIBQOFSQL_LIBRARY_VERSION)
@@ -166,9 +166,9 @@ AC_REPLACE_FUNCS(strptime localtime_r)
 
 dnl *******************************
 dnl Internationalization
-dnl ******************************* 
+dnl *******************************
 
-ALL_LINGUAS="en_GB "
+ALL_LINGUAS="en_GB sv vi "
 GETTEXT_PACKAGE=qof
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
@@ -190,7 +190,7 @@ AC_ARG_ENABLE(deprecated-glib,
 
 dnl **************************************************************
 dnl If DWI is found on the build system, then build with it.
-dnl Need to check for libdwi-qof too .... 
+dnl Need to check for libdwi-qof too ....
 dnl **************************************************************
 
 AC_MSG_CHECKING([for DWI])
@@ -198,7 +198,7 @@ DWI_CFLAGS=`$PKG_CONFIG --silence-errors --cflags dwi-0`
 DWI_LIBS=`$PKG_CONFIG --silence-errors --libs dwi-0`
 AC_SUBST(DWI_CFLAGS)
 AC_SUBST(DWI_LIBS)
-                                                                                
+
 if test x$DWI_LIBS = x; then
    AC_MSG_RESULT([No, DWI was not found; build without DWI.])
 else
@@ -244,12 +244,12 @@ AC_SUBST(PERL)
 AC_DEFUN([BB_ENABLE_DOXYGEN],
 [
 AC_ARG_ENABLE(doxygen, [  --enable-doxygen        enable documentation generation with doxygen (auto)])
-AC_ARG_ENABLE(dot, [  --enable-dot            use 'dot' to generate graphs in doxygen (auto)])              
-AC_ARG_ENABLE(html-docs, [  --enable-html-docs      enable HTML generation with doxygen (yes)], [], [ enable_html_docs=yes])              
-AC_ARG_ENABLE(latex-docs, [  --enable-latex-docs     enable LaTeX documentation generation with doxygen (no)], [], [ enable_latex_docs=no])              
+AC_ARG_ENABLE(dot, [  --enable-dot            use 'dot' to generate graphs in doxygen (auto)])
+AC_ARG_ENABLE(html-docs, [  --enable-html-docs      enable HTML generation with doxygen (yes)], [], [ enable_html_docs=yes])
+AC_ARG_ENABLE(latex-docs, [  --enable-latex-docs     enable LaTeX documentation generation with doxygen (no)], [], [ enable_latex_docs=no])
 if test "x$enable_doxygen" = xno; then
         enable_doc=no
-else 
+else
         AC_PATH_PROG(DOXYGEN, doxygen, , $PATH)
         if test x$DOXYGEN = x; then
                 if test "x$enable_doxygen" = xyes; then
@@ -398,16 +398,16 @@ echo ""
 
 dnl <= CFLAGS and LDFLAGS =>
 echo "CFLAGS      :   $warnFLAGS"
-echo "LDFLAGS : $LDFLAGS"
+echo "LDFLAGS     :   $LDFLAGS"
 echo "QOF_CFLAGS  :   "`eval echo $QOF_CFLAGS`
 echo "QOF_LIBS    :   $QOF_LIBS"
-echo "DWI_LIBS : $DWI_LIBS"
+echo "DWI_LIBS    :   $DWI_LIBS"
 echo "LIBXML2     :   "`eval echo $LIBXML_VERSION`
 echo "LIBGDA      :   $GDA_VERSION"
-echo "prefix : $prefix"
-echo "data dir : "`eval echo $datadir`
+echo "prefix      :   $prefix"
+echo "data dir    :   "`eval echo $datadir`
 echo "XML dir     :   "`eval echo $QSF_SCHEMA_DIR`
-echo "include dir : "`eval echo $includedir`
+echo "include dir :   "`eval echo $includedir`
 echo "lib dir     :   "`eval echo $QSF_LIB_DIR`
 echo ""
 echo ""
