Make libqof-dev depend on libgda2-dev. (Vorlon. Prevent QOF applications having to depend on libgda2-* unnecessarily.)

--- a/qof/debian/control
+++ b/qof/debian/control
@@ -9,7 +9,7 @@ Package: libqof-dev
 Priority: optional
 Section: libdevel
 Architecture: any
-Depends: libqof1 (= ${Source-Version})
+Depends: libqof1 (= ${Source-Version}), libgda2-dev
 Description: Query Object Framework
  A framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
