Derek Atkin's patch for usable replacement for GNC_SCANF_LLD and Mac OSX fix

--- a/qof/configure.in
+++ b/qof/configure.in
@@ -162,7 +162,7 @@ dnl Checks for library functions.
 dnl *****************************
 AC_FUNC_STRFTIME
 AC_CHECK_HEADERS(sys/times.h langinfo.h)
-AC_CHECK_FUNCS(getcwd gettimeofday getline getwd stpcpy strdup strtoul)
+AC_CHECK_FUNCS(getcwd gettimeofday getline getwd stpcpy strdup strtoul strcasestr)
 AC_REPLACE_FUNCS(strptime localtime_r)
 
 dnl *******************************
