--- a/qof/emdebian/rules
+++ b/qof/emdebian/rules
@@ -1,5 +1,6 @@
 #!/usr/bin/make -f
 # Copyright 2003 Goedson Teixeira Paixao <goedson@debian.org>
+# Copyright 2006 Neil Williams <linux@codehelp.co.uk>
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -13,13 +14,10 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
-# 02111-1307 USA.
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+# 02110-1301, USA.
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
-
-DEB_DH_STRIP_ARGS=--dbg-package=libqof1
-
 
