--- a/qof/configure.in
+++ b/qof/configure.in
@@ -1,16 +1,17 @@
 ## -*-m4-*-
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(qof, 0.6.4, http://lists.sourceforge.net/lists/listinfo/qof-devel)
+AC_INIT(qof, 0.7.0, http://lists.sourceforge.net/lists/listinfo/qof-devel)
 
 AC_PREREQ(2.53)
+AC_GNU_SOURCE
 
-LIBQOF_LIBRARY_VERSION=1:5:0
+LIBQOF_LIBRARY_VERSION=1:6:0
 LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:4:0
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 
-VERSION=0.6.4
+VERSION=0.7.0
 AC_SUBST(VERSION)
 PACKAGE=qof
 AC_SUBST(PACKAGE)
@@ -30,26 +31,11 @@ AC_PROG_YACC
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
-
 AC_FUNC_MKTIME
 AC_FUNC_STRTOD
 
 AC_PROG_INTLTOOL
 INTLTOOLIZE=${INTLTOOLIZE:-intltoolize}
-
-AC_DEFUN([AS_SCRUB_INCLUDE],
-[
-  GIVEN_CFLAGS=$[$1]
-  INCLUDE_DIRS=`echo | cpp -v 2>&1`
-
-  dnl remove everything from this output between the "starts here" and "End of"
-  dnl line
-  INCLUDE_DIRS=`echo $INCLUDE_DIRS | sed -e 's/.*<...> search starts here://' | sed -e 's/End of search list.*//'`
-  for dir in $INCLUDE_DIRS; do
-    GIVEN_CFLAGS=$(echo $GIVEN_CFLAGS | sed -e "s;-I$dir ;;" | sed -e "s;-I$dir$;;")
-  done
-  [$1]=$GIVEN_CFLAGS
-])
 
 dnl *****************************************
 dnl pkg-config check time
@@ -61,7 +47,7 @@ AC_PATH_PROG(PKG_CONFIG,pkg-config)
 if test "x$PKG_CONFIG" != x; then
 	GLIB_LIBS=`$PKG_CONFIG --libs glib-2.0`
 	GLIB_CFLAGS=`$PKG_CONFIG --cflags glib-2.0`
-  GOBJECT_LIBS=`$PKG_CONFIG --libs gobject-2.0`
+	GOBJECT_LIBS=`$PKG_CONFIG --libs gobject-2.0`
 	GMODULE_LIBS=`$PKG_CONFIG --libs gmodule-2.0`
 fi
 AC_SUBST(GLIB_CFLAGS)
@@ -152,7 +138,6 @@ AC_C_INLINE
 AC_TYPE_OFF_T
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
-AC_STRUCT_ST_RDEV
 AC_HEADER_TIME
 AC_STRUCT_TM
 AC_TYPE_UID_T
@@ -161,9 +146,10 @@ dnl *****************************
 dnl Checks for library functions.
 dnl *****************************
 AC_FUNC_STRFTIME
-AC_CHECK_HEADERS(sys/times.h langinfo.h)
-AC_CHECK_FUNCS(getcwd gettimeofday getline getwd stpcpy strdup strtoul strcasestr)
-AC_REPLACE_FUNCS(strptime localtime_r)
+AC_CHECK_HEADERS(sys/times.h time.h langinfo.h wchar.h )
+AC_CHECK_FUNCS(getcwd gettimeofday getline getwd stpcpy strdup strtoul \
+	strcasestr gmtime_r mblen tzname tzset)
+AC_CHECK_MEMBERS([struct stat.st_rdev])
 
 dnl *******************************
 dnl Internationalization
@@ -334,9 +320,10 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
-QSF_SCHEMA_DIR=`eval echo $datadir`"/xml/qof/qsf"
+DATADIR=`eval echo $datadir`
+QSF_SCHEMA_DIR=`eval echo $DATADIR`"/xml/qof/qsf"
 AC_SUBST(QSF_SCHEMA_DIR)
-BACKEND_SCHEMA_DIR=`eval echo $datadir`"/xml/qof/"
+BACKEND_SCHEMA_DIR=`eval echo $DATADIR`"/xml/qof/"
 AC_SUBST(BACKEND_SCHEMA_DIR)
 
 QOF_CFLAGS="-I$includedir/qof"
@@ -381,6 +368,7 @@ backend/dwi/Makefile
 backend/file/Makefile
 backend/file/qsf-dir.h
 doc/Makefile
+doc/html/Makefile
 doc/doxygen.cfg
 lib/Makefile
 lib/libsql/Makefile
@@ -406,7 +394,7 @@ echo "DWI_LIBS    :   $DWI_LIBS"
 echo "LIBXML2     :   "`eval echo $LIBXML_VERSION`
 echo "LIBGDA      :   $GDA_VERSION"
 echo "prefix      :   $prefix"
-echo "data dir    :   "`eval echo $datadir`
+echo "data dir    :   "`eval echo $DATADIR`
 echo "XML dir     :   "`eval echo $QSF_SCHEMA_DIR`
 echo "include dir :   "`eval echo $includedir`
 echo "lib dir     :   "`eval echo $QSF_LIB_DIR`
