--- a/qof/debian/rules
+++ b/qof/debian/rules
@@ -21,3 +21,5 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
+DEB_MAKE_CHECK_TARGET = check
+
