implement configure option to disable deprecated code

--- a/qof/emdebian/rules
+++ b/qof/emdebian/rules
@@ -17,7 +17,8 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 # 02110-1301, USA.
 
+DEB_CONFIGURE_EXTRA_FLAGS := --disable-deprecated-qof
+
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
-
