--- a/qof/configure.in
+++ b/qof/configure.in
@@ -1,5 +1,3 @@
-## -*-m4-*-
-dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(qof, 0.7.0, http://lists.sourceforge.net/lists/listinfo/qof-devel)
 
@@ -7,7 +5,7 @@ AC_PREREQ(2.53)
 AC_GNU_SOURCE
 
 LIBQOF_LIBRARY_VERSION=1:6:0
-LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:4:0
+LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:5:0
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 
@@ -65,9 +63,25 @@ else
 	AC_MSG_RESULT(no)
 fi
 
+dnl ********************************
+dnl Auto-disable deprecated QOF
+dnl ********************************
+
+AC_ARG_ENABLE(deprecated-qof,
+  [  --disable-deprecated-qof    don't use deprecated QOF functions],
+  [case "${enableval}" in
+        no) AC_DEFINE(QOF_DISABLE_DEPRECATED,1,
+          [Don't use deprecated QOF functions]) ;;
+        yes) ;;
+        *) AC_MSG_ERROR(bad value ${enableval} for --enable-deprecated-qof) ;;
+        esac])
+
 dnl **************************************************************
 dnl libxml2
 dnl libxml2 v2.5.10 is required for QSF (backend/file)
+dnl
+dnl To become optional once QSQL backend is also available.
+dnl
 dnl **************************************************************
 
 LIBXML2_REQUIRED=2.5.10
