Enable -Wextra under --enable-compiler-warnings.

--- a/qof/configure.in
+++ b/qof/configure.in
@@ -325,7 +325,7 @@ AC_ARG_ENABLE(compile-warnings,
 
 if test "$GCC" = "yes" -a "$set_compile_warnings" != "no"; then
         warnFLAGS="$warnFLAGS -Wcast-align \
- -Wmissing-prototypes -Wmissing-declarations -Werror \
+ -Wmissing-prototypes -Wmissing-declarations -Werror -Wextra \
  -Wstrict-prototypes -Winline -Wnested-externs -Wpointer-arith"
 fi
 
