--- a/qof/configure.in
+++ b/qof/configure.in
@@ -324,9 +324,10 @@ AC_ARG_ENABLE(compile-warnings,
               set_compile_warnings=yes)
 
 if test "$GCC" = "yes" -a "$set_compile_warnings" != "no"; then
-        warnFLAGS="$warnFLAGS -Wcast-align \
- -Wmissing-prototypes -Wmissing-declarations -Werror -Wextra \
- -Wstrict-prototypes -Winline -Wnested-externs -Wpointer-arith"
+        warnFLAGS="$warnFLAGS -Wcast-align -Wsign-compare \
+ -Wmissing-prototypes -Wmissing-declarations -Werror -Wmissing-include-dirs \
+ -Wstrict-prototypes -Winline -Wnested-externs -Wpointer-arith \
+ -Wmissing-field-initializers"
 fi
 
 AC_SUBST(CFLAGS)
