Embedded only sqlite backend

--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -9,7 +9,7 @@
 # Created by Linas Vepstas <linas@linas.org> July 2004
 # Conditional DWI build: Neil Williams <linux@codehelp.co.uk>
 # QSF added: Neil Williams <linux@codehelp.co.uk> Dec 2004
-#
+# QSQLite added: Neil Williams <linux@codehelp.co.uk> Aug 06
 
 if BUILD_DWI
 DWIBE=dwi
@@ -17,8 +17,14 @@ else
 DWIBE=
 endif
 
-SUBDIRS = $(DWIBE) file
+if EMBEDDED
+SQLITE=sqlite
+else
+SQLITE=file
+endif
 
-DIST_SUBDIRS =  dwi file
+SUBDIRS = $(DWIBE) $(SQLITE)
+
+DIST_SUBDIRS =  dwi file sqlite
  
 
