--- a/qof/configure.in
+++ b/qof/configure.in
@@ -76,27 +76,14 @@ dnl Auto-disable deprecated QOF
 dnl ********************************
 
 AC_ARG_ENABLE(deprecated-qof,
-  [  --disable-deprecated-qof    don't use deprecated QOF functions],
+  [  --disable-deprecated-qof
+                          don't use deprecated QOF functions],
   [case "${enableval}" in
         no) AC_DEFINE(QOF_DISABLE_DEPRECATED,1,
           [Don't use deprecated QOF functions]) ;;
         yes) ;;
         *) AC_MSG_ERROR(bad value ${enableval} for --enable-deprecated-qof) ;;
         esac])
-
-dnl **************************************************************
-dnl libxml2
-dnl libxml2 v2.5.10 is required for QSF (backend/file)
-dnl
-dnl To become optional once QSQL backend is also available.
-dnl
-dnl **************************************************************
-
-LIBXML2_REQUIRED=2.5.10
-PKG_CHECK_MODULES(LIBXML2, libxml-2.0 >= $LIBXML2_REQUIRED)
-LIBXML_VERSION=`xml2-config --version`
-AC_SUBST(LIBXML2_CFLAGS)
-AC_SUBST(LIBXML2_LIBS)
 
 AC_MSG_CHECKING(for darwin)
 case $host_os in
@@ -189,13 +176,45 @@ dnl Auto-disable deprecated glib
 dnl ********************************
 
 AC_ARG_ENABLE(deprecated-glib,
-  [  --disable-deprecated-glib    don't use deprecated glib functions],
+  [  --disable-deprecated-glib
+                          don't use deprecated glib functions],
   [case "${enableval}" in
         no) AC_DEFINE(G_DISABLE_DEPRECATED,1,
           [Don't use deprecated glib functions]) ;;
         yes) ;;
         *) AC_MSG_ERROR(bad value ${enableval} for --enable-deprecated-glib) ;;
         esac])
+
+dnl **************************************************************
+dnl QofSQLite backend for embedded systems.
+dnl libxml2 for host systems.
+dnl libxml2 v2.5.10 is required for QSF (backend/file)
+dnl **************************************************************
+
+AC_ARG_ENABLE(embedded,
+  [  --enable-sqlite         Enable the SQLite backend for embedded systems
+                          and DISABLE the QSF XML backend. (no)],
+  [case "${enableval}" in
+  		no) sqlite="no" ;;
+		yes) sqlite="yes" ;;
+		*) AC_MSG_ERROR(bad value ${enableval} for --enable-sqlite) ;;
+		esac])
+
+if test "$sqlite" = "yes"; then
+	PKG_CHECK_MODULES(sqlite, sqlite >= 2.8.0)
+	AC_SUBST(sqlite_LIBS)
+	AC_SUBST(sqlite_CFLAGS)
+	backend="sqlite"
+else
+	LIBXML2_REQUIRED=2.5.10
+	PKG_CHECK_MODULES(LIBXML2, libxml-2.0 >= $LIBXML2_REQUIRED)
+	LIBXML_VERSION=`xml2-config --version`
+	AC_SUBST(LIBXML2_CFLAGS)
+	AC_SUBST(LIBXML2_LIBS)
+	backend="libxml2 == $LIBXML_VERSION"
+fi
+
+AM_CONDITIONAL(EMBEDDED, [test "$sqlite" = "yes"])
 
 dnl **************************************************************
 dnl If DWI is found on the build system, then build with it.
@@ -298,7 +317,8 @@ if test ${GCC}x = yesx; then
   warnFLAGS=
   CFLAGS="${CFLAGS} -g2 -Wall"
   AC_ARG_ENABLE(error-on-warning,
-        [  --disable-error-on-warning    disable treating compile warnings as errors],
+        [  --disable-error-on-warning    
+                          disable treating compile warnings as errors],
         [case "${enableval}" in
         yes) warnFLAGS="${warnFLAGS} -Werror" ;;
         no)  ;;
@@ -398,6 +418,7 @@ backend/Makefile
 backend/dwi/Makefile
 backend/file/Makefile
 backend/file/qsf-dir.h
+backend/sqlite/Makefile
 doc/Makefile
 doc/html/Makefile
 doc/doxygen.cfg
@@ -422,7 +443,7 @@ echo "LDFLAGS     :   $LDFLAGS"
 echo "QOF_CFLAGS  :   "`eval echo $QOF_CFLAGS`
 echo "QOF_LIBS    :   $QOF_LIBS"
 echo "DWI_LIBS    :   $DWI_LIBS"
-echo "LIBXML2     :   "`eval echo $LIBXML_VERSION`
+echo "Backend     :   $backend"
 echo "LIBGDA      :   $GDA_VERSION"
 echo "prefix      :   $prefix"
 echo "data dir    :   "`eval echo $DATADIR`
